--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@skeletonlabs/skeleton": "^2.10.4",
     "@skeletonlabs/tw-plugin": "^0.4.0",
+    "@sveltejs/adapter-netlify": "^4.4.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "autoprefixer": "^10.4.20",
     "svelte": "^5.2.7",
